[package]
name = "directb2s"
version = "0.1.0"
edition = "2024"

[dependencies]
quick-xml = { version = "0.39.0", features = ["serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_repr = "0.1.20"
dirs = "6.0.0"


[dev-dependencies]
pretty_assertions = "1.4.1"
testresult = "0.4.1"
roxmltree = "0.21.1"
rayon = "1.11.0"
walkdir = "2.5.0"