[package]
name = "directb2s"
version = "0.1.1"
edition = "2024"
description = "Library for reading visual pinball directb2s files"
repository = "https://github.com/francisdb/rust-directb2s"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/rust-directb2s"

keywords = ["vpin", "visual-pinball", "virtual-pinball", "vpx", "directb2s"]
categories = ["game-engines", "game-development"]

[package.metadata.docs.rs]
all-features = true

exclude = [
    "testdata/*",
]

[dependencies]
quick-xml = { version = "0.39.0", features = ["serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_repr = "0.1.20"
dirs = "6.0.0"


[dev-dependencies]
pretty_assertions = "1.4.1"
testresult = "0.4.1"
roxmltree = "0.21.1"
rayon = "1.11.0"
walkdir = "2.5.0"
